I'm not a magician, I'm just learning

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
         </svg>
     </div>
     <h2 class="heading">БЕЗ ПРОВОДОВ</h2>
-        <p class="text text-margin center">
-            Беспроводная мышь MX Master 3 работает без проводов до нескольких месяцев. Вы закроете приоритетные
-            задачи
-            прежде, чем понадобится подзарядка.
-        </p>
+    <p class="text text-margin center">
+        Пользователь может подключить мышь сразу к трем устройствам и с легкостью переключаться между ними нажатием кнопки Easy-Switch™. Вы закроете приоритетные
+        задачи
+        прежде, чем понадобится подзарядка.
+    </p>
         <div class="center_bluetooth">
             <div class="bluetooth__img">
                 <div class="bluetooth__heading">
